tests/errors/parse-error-lval.ja
procedure main()
    x[1] += x[#]
